--- a/Mission07_haylowry/Views/Home/MovieReceived.cshtml
+++ b/Mission07_haylowry/Views/Home/MovieReceived.cshtml
@@ -2,8 +2,10 @@
     ViewData["Title"] = "Add Movies";
 }
 
+@model Mission07_haylowry.Models.Movie
+
 <div class="text-center">
-    <h1 class="display-4">Thank you for Submitting your Movie</h1>
+    <h1 class="display-4">Thank you for Submitting @Model.Title</h1>
     <br />
     <p>Your suggestion will be reveiwed in the coming weeks<p />
 </div>
