--- a/Mission07_haylowry/Views/Home/MovieList.cshtml
+++ b/Mission07_haylowry/Views/Home/MovieList.cshtml
@@ -18,11 +18,14 @@
         @foreach (var movie in Model)
             {
                 <tr>
-                    <td>@movie.cateogry</td>
+                    <td>@movie.Category.CategoryName</td>
                     <td>@movie.Title</td>
                     <td>@movie.Year</td>
                     <td>@movie.Director</td>
                     <td>@movie.Rating</td>
+
+                    <td><a asp-controller="Home" asp-action="Edit" asp-route-movieid="@movie.MovieId">Edit</a></td>
+                    <td><a asp-controller="Home" asp-action="Delete" asp-route-movieid="@movie.MovieId">Delete</a></td>
                 </tr>
             }
     </tbody>
